--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-linear-gradient": "2.6.2",
+    "react-native-responsive-fontsize": "0.5.1",
+    "react-native-simple-gradient-progressbar-view": "0.2.0",
+    "react-native-sqlite-storage": "6.0.1",
+    "react-native-vector-icons": "9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +26,7 @@
     "@tsconfig/react-native": "2.0.3",
     "@types/jest": "29.5.0",
     "@types/react": "18.0.28",
+    "@types/react-native-vector-icons": "6.4.13",
     "@types/react-test-renderer": "18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
