--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-seoul/kakao-login": "5.2.6",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-linear-gradient": "2.6.2",
