--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@invertase/react-native-apple-authentication": "2.2.2",
     "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-menu/menu": "0.7.3",
     "@react-native-seoul/kakao-login": "5.2.6",
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-date-picker": "4.2.10",
+    "react-native-dialog": "9.3.0",
     "react-native-haptic-feedback": "2.0.3",
     "react-native-linear-gradient": "2.6.2",
     "react-native-responsive-fontsize": "0.5.1",
