--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@invertase/react-native-apple-authentication": "2.2.2",
     "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-community/checkbox": "0.5.15",
     "@react-native-menu/menu": "0.7.3",
     "@react-native-seoul/kakao-login": "5.2.6",
     "@types/dotenv": "8.2.0",
