--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/mongoose": "5.11.97",
     "@types/mongoose-sequence": "3.0.7",
     "@types/node": "18.11.17",
+    "@types/winston": "2.4.4",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
@@ -25,7 +26,9 @@
     "mongoose-sequence": "5.3.1",
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "winston": "3.8.2",
+    "winston-daily-rotate-file": "4.7.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.3",
