--- a/app/ios/YVTodo/Info.plist
+++ b/app/ios/YVTodo/Info.plist
@@ -33,6 +33,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+    <key>CodePushDeploymentKey</key>
+	<string>${CODEPUSH_KEY}</string>
     <key>KAKAO_APP_KEY</key>
     <string>7770f0f9deeb22484a3c8c7754cf7463</string>
     <key>LSApplicationQueriesSchemes</key>
