--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-code-push": "8.0.1",
     "react-native-date-picker": "4.2.10",
     "react-native-dialog": "9.3.0",
     "react-native-dotenv": "3.4.8",
