투두 서버 도커 연동

--- a/app/ios/YVTodo/Info.plist
+++ b/app/ios/YVTodo/Info.plist
@@ -47,11 +47,13 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>  
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+            <key>yoovin.iptime.org</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
