--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,14 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
-}
+    "compilerOptions": {
+      "module": "commonjs",
+      "target": "ES5",
+      "sourceMap": true,
+      "experimentalDecorators": true,
+      "outDir": "build"
+    },
+    "moduleResolution": "node",
+    "exclude": [
+      "node_modules",
+      "view"
+    ]
+  }
