--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,11 @@
     "@types/react-native-vector-icons": "6.4.13",
     "@types/react-router-dom": "5.3.3",
     "axios": "1.4.0",
+    "date-fns": "2.30.0",
     "jsonwebtoken": "9.0.0",
     "jwt-decode": "3.1.2",
     "react": "^18.2.0",
+    "react-datepicker": "4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "4.8.0",
     "react-native-vector-icons": "9.2.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "recoil": "0.7.7",
+    "sweetalert2": "11.7.5",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "9.0.2"
+    "@types/jsonwebtoken": "9.0.2",
+    "@types/react-datepicker": "4.11.2"
   }
 }
