--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://yoovin.iptime.org/cardo/",
   "dependencies": {
     "@ramonak/react-progress-bar": "5.0.3",
     "@testing-library/jest-dom": "5.16.5",
